yimpexeditor/src/test/resources/errors/quotes/quoted-modifiers6.impex
# ERROR Modifier value inside double quoted attribute cannot be surrounded by double quotes 
INSERT_UPDATE Customer; uid[unique=true];"Name[default="Mario"]"; 
; andi; ; 
